--- a/charts/node-analyzer/tests/golden_template_test.yaml
+++ b/charts/node-analyzer/tests/golden_template_test.yaml
@@ -8,6 +8,8 @@ tests:
       sysdig:
         accessKey: AAAAAAAA-BBBB-CCCC-DDDD-EEEEEEEEEEEE
       nodeAnalyzer:
+        benchmarkRunner:
+          deploy: true
         imageAnalyzer:
           resources:
             requests:
