chore(sysdig-deploy): disable benchamark runner from CI that is not supported anymore

--- a/charts/sysdig-deploy/ci/test-values.yaml.template
+++ b/charts/sysdig-deploy/ci/test-values.yaml.template
@@ -4,3 +4,7 @@ global:
   sysdig:
     accessKey: ${SECURE_AGENT_TOKEN}
     secureAPIToken: ${SECURE_API_TOKEN}
+nodeAnalyzer:
+  nodeAnalyzer:
+    benchmarkRunner:
+      deploy: false
