--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -33,14 +33,10 @@ global:
       #       MMNlTAQ9fvdNOTzZntye0PQYRTTS34D=
       #       -----END CERTIFICATE-----
       # Filename that is used when creating the secret.  Required if cert is provided.
-      keyName:
-      # Provide the name of an existing Secret that contains the CA required
-      existingCaSecret:
-      # Provide the filename that is defined inside the existing Secret
-      existingCaSecretKeyName:
-      # Provide the name of an existing ConfigMap that contains the CA required
-      existingCaConfigMap:
-      # Provide the filename that is defined inside the existing ConfigMap
+      keyName: null # Provide the name of an existing Secret that contains the CA required
+      existingCaSecret: null # Provide the filename that is defined inside the existing Secret
+      existingCaSecretKeyName: null # Provide the name of an existing ConfigMap that contains the CA required
+      existingCaConfigMap: null # Provide the filename that is defined inside the existing ConfigMap
       existingCaConfigMapKeyName: null
 namespace: ""
 image:
@@ -51,7 +47,7 @@ image:
   overrideValue: null
   registry: quay.io
   repository: sysdig/agent
-  tag: 12.17.1
+  tag: 12.18.0
   # Specify a imagePullPolicy
   # Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   # ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
