chore: migrate default branch to main

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Release Charts
 on:
   push:
     branches:
-      - master
+      - main
 
 env:
   GITHUB_USERNAME: draios-jenkins
@@ -192,5 +192,5 @@ jobs:
               git add ${chart_path}/RELEASE-NOTES.md
               git commit -m "github_actions_ci: Update CHANGELOG and RELEASE-NOTES for ${chart_name}-${chart_version}"
           done
-          # Push changes to the master branch.
-          git push origin "${GITHUB_REF##*/}":master -f
+          # Push changes to the main branch.
+          git push origin "${GITHUB_REF##*/}":main -f
