--- a/.github/workflows/update-sysdig-deploy-chart.yaml
+++ b/.github/workflows/update-sysdig-deploy-chart.yaml
@@ -3,7 +3,7 @@ run-name: github actions is updating sysdig-deploy versions based on dependencie
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   update-sysdig-deploy-version:
     runs-on: ubuntu-latest
@@ -45,7 +45,7 @@ jobs:
         uses: peter-evans/create-pull-request@v5.0.2
         with:
           title: "chore(sysdig-deploy): Automatic version bump due to updated dependencies"
-          base: master
+          base: main
           delete-branch: true
           labels: automated PR
           token: ${{ secrets.TOOLS_JENKINS_ADMIN_ACCESS_GITHUB_TOKEN }}
